--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h2 class="main-title">Here`s diferent colors</h2>
+    <span class="title-descr">press the "space" to change color</span>
 
     <div class="main-container">
         <div class="col">
